Click drops a ball. Submit Ludum Dare.

--- a/Examples/index.html
+++ b/Examples/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta http-equiv="cache-control" content="no-cache, no-store">
-	<title>Building Bridges</title>
-	<meta name="description" content="Build a bounce. Game jam by Ethan Kennerly."/>
+	<title>Bounce</title>
+	<meta name="description" content="How many balls can you bounce?  Game jam by Ethan Kennerly."/>
 	
 	<script src="../js/swfobject.js"></script>
 	<script src="flashvars.js"></script>
@@ -52,8 +52,7 @@ Bounce
 
 How many balls can you bounce?
 
-MOUSE to tilt floor.
-CLICK to make a ball.
+MOUSE tilts floor.  CLICK drops a ball.
 
 Game jam, Dec 5 - 7.  Ludum Dare 31.  Theme: "Entire Game on One Screen"
 
